Adding JS config templating

--- a/mub/templates/mub/context_js.html
+++ b/mub/templates/mub/context_js.html
@@ -1,3 +1,6 @@
 {% load static from staticfiles %}
+{% if not IS_MINIFIED %}
+	{% include "mub/js_config_wrapper.txt" %}
+{% endif %}
 {% for item in items %}<script type="text/javascript" src="{% static item %}"></script>
 {% endfor %}
